--- a/capp/static/carbon_calc.css
+++ b/capp/static/carbon_calc.css
@@ -11,6 +11,7 @@ h4 {
 /* Section header */
 .section_header_carbon_calc {
   background-color:#90a897;
+
 }
 .header_carbon_calc {
   display: flex;  
@@ -184,21 +185,23 @@ margin: 20px 10px;
 padding: 15px 20px;
 text-align:center;
 }  
-.two_emissions_graphs .container  .box:nth-of-type(1) {
+.two_emissions_graphs .container  .box:nth-of-type(1) { /*Box*/
 flex-grow:1;
 background: #99b39f;
 border-radius: 10px;
 margin: 20px 10px;
 padding: 15px 20px;
 text-align:center;
+min-width: 450px;
 }  
-.two_emissions_graphs .container  .box:nth-of-type(2) {
+.two_emissions_graphs .container  .box:nth-of-type(2) { /*Box*/
 flex-grow:1;
 background: #99b39f;
 border-radius: 10px;
 margin: 20px 10px;
 padding: 15px 20px;
 text-align:center;
+min-width: 450px;
 }  
 /*End container two_emissions_graphs*/
 
@@ -271,3 +274,24 @@ color: #99b39f;
   align-items: center;
 }
 }
+
+@media screen and (max-width: 400px) {
+  .two_emissions_graphs .container  .box:nth-of-type(1) { /*Box*/
+    flex-grow:1;
+    background: #99b39f;
+    border-radius: 10px;
+    margin: 20px 10px;
+    padding: 15px 20px;
+    text-align:center;
+    min-width: 350px;
+    }  
+    .two_emissions_graphs .container  .box:nth-of-type(2) { /*Box*/
+    flex-grow:1;
+    background: #99b39f;
+    border-radius: 10px;
+    margin: 20px 10px;
+    padding: 15px 20px;
+    text-align:center;
+    min-width: 350px;
+    }  
+  }
